# GTK-Projects

./: 1main.c  2main.c  3dviewer.gresource.xml  7main.c  CMakeLists.txt  Makefile  README.md  builder-o.ui  builder.ui  calculator.c  calculator.h  config.mk  credit_calculator.c  credit_calculator.h  dox_config  hello-world-gtk  main-gtk.c  main-gtk.h  main.c  main.h  test  viewer.gresource.xml
3D_Viewer/: CMakeLists.txt  com.github.Gwarek2.Viewer.gschema.xml  compile_commands.json  main.c
3D_Viewer/core/: affine_transformations.c  affine_transformations.h  obj_parser.c  obj_parser.h
3D_Viewer/gui/: app.h  model.c  prefs.c  prefs.h  utils.c
3D_Viewer/gui/shaders/: f_shader_point.glsl  v_shader.glsl  vertex_shader.glsl
3D_Viewer/gui/templates/: window.ui
3D_Viewer/gui/ui/: model.ui  prefs.ui  window.ui
3D_Viewer/tests/: test_runner.c
C7_SmartCalc.xcodeproj/: project.pbxproj
Calculation/: bank_rounding.c  bank_rounding.h  calculator.c  calculator.h  credit_calculator.c  credit_calculator.h  deposit_calculator.c  deposit_calculator.h  eval_func.c  eval_func.h  no_var.c
Calculator/: main-gtk.c  main.c
GUI/: credit_calc_gui.c  deposit_calc_gui.c  draw_func.c  input_handling.c  main-gtk.c  main-gtk.h
Stack/: module_parser.c  nodes.c  nodes.h  parser.c  parser.h
Style/: builder-o.ui  credit-calc-o.ui  deposit-calc-o.ui  plot-o.ui  theme.css
Testcases/: check_main.c  check_main.h  credit_suite.c  deposit_suite.c  errors_suite.c  simple_suite.c
Tests/: check_main.c  check_main.h  errors_suite.c  simple_suite.c
Validation/: module_parser.c  nodes.c  nodes.h  parser.c  parser.h
cmake/: FindCheck.cmake
core/: affine_transformations.c  affine_transformations.h  array.c  array.h  obj_parser.c  obj_parser.h
gui/: app.c  app.h  enums.h  model.c  model.h  render_area.c  render_area.h  utils.h  window.c  window.h
html/: bank__rounding_8h.html  calculator_8c.js  check__main_8h_source.html  classes.html  credit__calculator_8c.js  deposit__calculator_8h.html  deposit__calculator_8h.js  deposit__suite_8c.html  draw__func_8c.js  eval__func_8c.html  functions.html  functions_vars.html  globals.html  globals_dup.js  globals_f.html  globals_h.html  globals_l.html  globals_n.html  globals_t.html  globals_type.html  main-gtk_8c.js  main-gtk_8h_source.html  main_8c.js  menudata.js  module__parser_8c.html  navtreeindex0.js  nodes_8c.js  simple__suite_8c.html  simple__suite_8c.js  structcredit__input.html  structentry__input.html  structwd__cont.html
tests/: affine_transformations_suite.c  build_tests.sh  fixtures.check.c  obj_parser_suite.c  test_runner.c  (+4 more)
(+217 files in other folders)
